# orchard

./: .env.example  .gitignore  README.md  pyproject.toml
orchard/configs/: config.yaml  global_config.py  prompts.yaml
orchard/llm/: global_vlm_client.py  llm_client.py  schema.py
orchard/remote/: msgpack_numpy.py  websocket_policy_client.py
orchard/utils/: config.py  image.py  json_parser.py  logging_utils.py  show_attention_map.py  show_bbox.py
