# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "orchard"
version = "0.1.0"
description = "Utils library, for DL and Robotics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "hydra-core>=1.3.2",
    "imageio[ffmpeg]>=2.37.0",
    "json-repair>=0.52.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mcp[cli]>=1.25.0",
    "msgpack>=1.1.2",
    "numpy>=2.3.3",
    "omegaconf>=2.3.0",
    "openai>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.1",
    "rosbags>=0.11.0",
    "scipy>=1.16.3",
    "starlette>=0.49.3",
    "tyro>=0.9.35",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "zarr>=3.1.3",
]

[tool.setuptools.packages.find]
include = ["orchard*"]  # 通配符匹配包名
